--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
-
+logging.level.org.springframework=DEBUG
